updated opf with corrected durchen

--- a/9055f9baf0ca4f96b22070bf98fc9cf8.opf/meta.yml
+++ b/9055f9baf0ca4f96b22070bf98fc9cf8.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     d6ebf20a1d514efb90a9f915c19dfeb2:
       base_file: v027.txt
       image_group_id: I1PD95872
-      title: ''
+      title: རྡོ་རྗེ་ཐེག་པའི་སྦོམ་པོའི་ལྟུང་བ།
       total_pages: 1953
       volume_number: 27
