--- a/D7830F088.opf/index.yml
+++ b/D7830F088.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   c78fab3fcc7a42eb8397420fa60cd673:
     parts: {}
+    work_id: D2482
     span:
-    - vol: 27
+    - base: 5dcb
       start: 1
       end: 1147
-    work_id: D2482
